# tera-template-macro

./: Cargo.toml  LICENSE  README.md
src/: lib.rs
tests/: ui_tests.rs
tests/ui/: missing_path.rs  missing_path.stderr  missing_template_attr.rs  missing_template_attr.stderr  no_args.rs  no_args.stderr  non_str_lit.rs  non_str_lit.stderr  smoke.rs
