[package]
name = "tera-template-macro"
version = "0.1.1"
authors=["Tebarem"]
edition = "2021"
description = "Proc Macro for tera-hot-reload crate"
homepage = "https://github.com/oxidlabs/tera-template-macro"
license = "MIT"
keywords = ["tera", "template"]

[dependencies]
tera = { version = "1.20.0", default-features = false }
syn = "2.0.72"
quote = "1.0.37"
proc-macro2 = "1.0.86"
[lib]
proc-macro = true
